--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,9 @@
-buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-    dependencies {
-        classpath "com.yupzip:wsdl2java:2.0"
-    }
-}
-
 plugins {
     id 'org.springframework.boot' version '2.5.3'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id "com.yupzip.wsdl2java" version "2.0"
     id 'java'
 }
-
-apply plugin: "com.yupzip.wsdl2java"
 
 group = 'ru.proskyryakov'
 version = '0.0.1-SNAPSHOT'
