--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.ws:spring-ws-core'
     implementation("io.springfox:springfox-boot-starter:3.0.0")
