--- a/docker-redis/docker-compose.yaml
+++ b/docker-redis/docker-compose.yaml
@@ -1,8 +1,19 @@
-redis:
-    env_file: 
-        - property.env
-    image: redis
-    command: redis-server --requirepass "${REDIS_PASSWORD}"
-    restart: always
-    ports:
-        - 6379:6379
+version: '3'
+services:
+    redis:
+        container_name: redis
+        image: redis
+        hostname: redis
+        command: redis-server --requirepass password
+        restart: always
+        ports:
+            - 6379:6379
+    redis-commander:
+        container_name: redis-commander
+        hostname: redis-commander
+        image: rediscommander/redis-commander:latest
+        restart: always
+        environment:
+            - REDIS_HOSTS=local:redis:6379
+        ports:
+            - 8081:8081
