--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.ws:spring-ws-core'
-    implementation("io.springfox:springfox-boot-starter:3.0.0")
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'junit:junit:4.13.1'
+
+    testImplementation 'org.mockito:mockito-core:3.11.2'
+    testImplementation 'io.rest-assured:rest-assured:4.4.0'
+    testImplementation 'io.rest-assured:spring-mock-mvc'
+
+
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
