--- a/docker-redis/docker-compose.yaml
+++ b/docker-redis/docker-compose.yaml
@@ -18,3 +18,11 @@ services:
             - REDIS_HOSTS=local:redis:6379
         ports:
             - 8081:8081
+    database:
+        container_name: postgresql
+        image: postgres
+        ports:
+            - 5434:5432
+        env_file:
+            - database.env
+        restart: always
