--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,20 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.postgresql:postgresql:42.2.23'
+    implementation 'org.flywaydb:flyway-core:7.12.1'
+
+
     implementation 'org.springframework.ws:spring-ws-core'
-    implementation("io.springfox:springfox-boot-starter:3.0.0")
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     wsdl2java 'com.sun.xml.bind:jaxb-xjc:2.3.0.1'
