--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,16 @@ spring:
     host: localhost
     port: 6379
     password: password
+  datasource:
+    url: jdbc:postgresql://localhost:5434/curs-history
+    username: user
+    password: password
+  jpa:
+    properties:
+      hibernate:
+        ddl-auto: validate
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+    show-sql: true
 
 
 #logging:
