--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.2.23'
     implementation 'org.flywaydb:flyway-core:7.12.1'
 
+    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 
     implementation 'org.springframework.ws:spring-ws-core'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
