Add scheduled update of history valute curs change

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,11 +23,12 @@ spring:
       hibernate:
         ddl-auto: validate
         dialect: org.hibernate.dialect.PostgreSQLDialect
-    show-sql: true
+#    show-sql: true
 
 scheduler:
   fixedDelay: 60000 #seconds
   initialDelay: 1000 #seconds
+  interval-coefficient: 1000
 
 #logging:
 #  level:
