--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation 'junit:junit:4.13.1'
 
+    implementation 'org.springframework.boot:spring-boot-starter-amqp:2.5.3'
+
     testImplementation 'org.mockito:mockito-core:3.11.2'
     testImplementation 'io.rest-assured:rest-assured:4.4.0'
     testImplementation 'io.rest-assured:spring-mock-mvc'
