--- a/docker-redis/docker-compose.yaml
+++ b/docker-redis/docker-compose.yaml
@@ -26,3 +26,11 @@ services:
         env_file:
             - database.env
         restart: always
+
+    rabbitmq:
+        container_name: rabbitmq
+        image: rabbitmq:3-management-alpine
+        ports:
+            - 5672:5672
+            - 15672:15672
+        restart: always
