--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,9 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:3.11.2'
     testImplementation 'io.rest-assured:rest-assured:4.4.0'
     testImplementation 'io.rest-assured:spring-mock-mvc'
-
+    testImplementation 'org.testcontainers:testcontainers:1.16.0'
+    testImplementation 'org.testcontainers:postgresql:1.16.0'
+    testImplementation 'org.testcontainers:junit-jupiter:1.16.0'
 
 
     compileOnly 'org.projectlombok:lombok'
