--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,10 +38,15 @@ scheduler:
   interval-coefficient: 1000
 
 rabbitmq:
-  exchange: change-history-exchange
-  routingkey: change-history-routingkey
-  queue: change-history-queue
-
+  exchange:
+    history: change-history-exchange
+    logging: logging-exchange
+  routingkey:
+    history: change-history-routingkey
+    logging: logging-routingkey
+  queue:
+    history: change-history-queue
+    logging: logging-queue
 
 
 #logging:
